# E4S1

./: get.py  main.py  phishing_site_urls.csv  pyproject.toml  req.txt
urls/: bad.csv  good.csv
